--- a/public/assets/scss/base/_base.scss
+++ b/public/assets/scss/base/_base.scss
@@ -143,9 +143,8 @@ wbr {
   line-height: 1.15;
   vertical-align: baseline;
   box-sizing: border-box;
-  font-family: "nanum", "open sans", sans-serif;
+  font-family: "open sans", "nanum", sans-serif;
   font-size: 16px;
-  letter-spacing: -0.04em;
 }
 html {
   -webkit-tap-highlight-color: transparent;
