--- a/public/assets/scss/utility/_variable.scss
+++ b/public/assets/scss/utility/_variable.scss
@@ -19,11 +19,11 @@ $zIndex-set: (
 );
 
 $path-set: (
-  icon: "../images/icon/",
-  btn: "../images/btn/",
-  img: "../images/img/",
-  logo: "../images/logo/",
-  object: "../images/object/",
+  icon: "../../images/icon/",
+  btn: "../../images/btn/",
+  img: "../../images/img/",
+  logo: "../../images/logo/",
+  object: "../../images/object/",
 );
 
 $breakpoints: (
