--- a/public/assets/css/custom/ui.css
+++ b/public/assets/css/custom/ui.css
@@ -763,17 +763,27 @@ html {
   .best-review__link {
     display: inline-block; }
 
+/* =================== title =================== */
 .title__tit {
   font-size: 20px;
   font-weight: 600;
   line-height: 27px;
   color: #ee3b4a;
   margin-bottom: 21px; }
+  .title__tit.block {
+    color: #000; }
+  .title__tit.white {
+    color: #fff; }
 .title__txt {
   font-size: 30px;
   font-weight: 300;
   line-height: 40px; }
+  .title__txt.block {
+    color: #000; }
+  .title__txt.white {
+    color: #fff; }
 
+/* =================== review =================== */
 .review {
   display: flex;
   align-self: flex-end;
@@ -800,6 +810,7 @@ html {
       font-size: 50px;
       font-weight: 600; }
 
+/* =================== com-slide =================== */
 .com-slide {
   position: relative; }
   .com-slide__item {
@@ -906,5 +917,112 @@ html {
     background-position: "cover";
     background-size: cover;
     background-repeat: no-repeat; }
+
+/* =================== com-card =================== */
+.com-card {
+  margin-bottom: 65px; }
+  .com-card__list {
+    display: flex;
+    margin: 0 -10px; }
+  .com-card__item {
+    position: relative;
+    z-index: 1;
+    width: 25%;
+    margin: 0 10px;
+    padding: 47px 23px;
+    background: #fff;
+    text-align: center; }
+    .com-card__item--tit {
+      font-size: 26px;
+      font-weight: 700;
+      line-height: 32px;
+      margin-bottom: 14px; }
+    .com-card__item--app {
+      font-size: 18px;
+      font-weight: 400;
+      color: #ee3b4a;
+      line-height: 1;
+      display: inline-block;
+      padding-bottom: 8px;
+      border-bottom: 1px solid #ee3b4a;
+      margin-bottom: 37px; }
+    .com-card__item--price {
+      display: flex;
+      align-items: center;
+      width: 230px;
+      height: 56px;
+      font-size: 16px;
+      font-weight: 300;
+      color: #ffffff;
+      margin-bottom: 37px;
+      background-image: linear-gradient(to right, #ee3b4a, #ff937a);
+      border-radius: 40px;
+      display: inline-block; }
+      .com-card__item--price .bold {
+        font-size: 26px;
+        font-weight: 600;
+        line-height: 56px;
+        color: #ffffff;
+        vertical-align: sub;
+        margin-left: 7px; }
+    .com-card__item--txt {
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 22px;
+      color: #242424;
+      margin-bottom: 40px; }
+
+/* =================== labs-price =================== */
+.labs-price {
+  position: relative;
+  overflow: hidden;
+  padding-top: 71px;
+  padding-bottom: 50px;
+  background: #0b072d; }
+  .labs-price .obj1 {
+    position: absolute;
+    left: -98px;
+    bottom: -230px; }
+  .labs-price .obj2 {
+    position: absolute;
+    right: 76px;
+    bottom: 124px; }
+  .labs-price__inner {
+    overflow: hidden; }
+  .labs-price__tit-wrap {
+    margin-bottom: 37px; }
+
+/* =================== check =================== */
+.input-box .chk-icon {
+  width: 18px;
+  height: 18px;
+  background-image: url("../../images/img/check-off.png");
+  display: inline-block; }
+.input-box .chk-box:checked + label.chk-icon {
+  width: 18px;
+  height: 18px;
+  background-image: url("../../images/img/check-on.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat; }
+
+/* =================== btn =================== */
+.btn-sm {
+  width: 146px;
+  height: 54px;
+  font-size: 18px;
+  line-height: 54px;
+  text-align: center;
+  display: inline-block; }
+
+.btn-border-red {
+  border: 1px solid #ee3b4a;
+  color: #fff; }
+
+.btn-rdi-rounded {
+  border-radius: 5px; }
+
+.btn-wrap {
+  justify-content: center; }
 
 /*# sourceMappingURL=ui.css.map */
