--- a/public/assets/scss/page/_main.scss
+++ b/public/assets/scss/page/_main.scss
@@ -94,6 +94,16 @@
         line-height: 82px;
       }
 
+      @include make-after {
+        @include pos-abs-center-horizontal;
+        bottom: 35px;
+        margin-left: 90px;
+        @include wh(837px, 1px);
+        background: #ffffff;
+        opacity: 0.2;
+      }
+
+      position: relative;
       margin-bottom: 48px;
     }
 
@@ -123,6 +133,17 @@
   }
 
   &__txt-wrap {
+    position: relative;
+
+    @include make-before {
+      @include pos-abs-center-horizontal;
+      bottom: 18px;
+      @include wh(482px, 1px);
+
+      background: #c5c5c5;
+      opacity: 0.5;
+    }
+
     @include flex {
       justify-content: space-between;
     }
@@ -212,6 +233,19 @@
     }
   }
 
+  &__more-btn--community {
+    @include wh(249px, 34px);
+    @include bg-url("img", "more-btn-comu.svg");
+
+    transition: 0.4s;
+    margin-bottom: 31px;
+    align-self: flex-end;
+
+    &:hover {
+      @include bg-url("img", "more-btn-comu-on.svg");
+    }
+  }
+
   &__txt {
     @include flex {
       align-items: center;
@@ -242,7 +276,7 @@
     height: 467px;
 
     &:hover {
-      border: 3px solid #ee3b4a;
+      // border: 3px solid #ee3b4a;
       box-sizing: border-box;
     }
 
@@ -384,15 +418,17 @@
     position: relative;
     z-index: 1;
     width: 25%;
+    height: 425px;
     margin: 0 10px;
     padding: 47px 23px;
+    padding-bottom: 20px;
     background: #fff;
     text-align: center;
 
     &--tit {
       @include font-op {
         font-size: 26px;
-        font-weight: 700;
+        font-weight: 600;
         line-height: 32px;
       }
 
@@ -452,7 +488,21 @@
         color: #242424;
       }
 
-      margin-bottom: 40px;
+      margin-bottom: 16px;
+    }
+
+    &--txt02 {
+      @include font-op {
+        font-size: 16px;
+        font-weight: 300;
+        line-height: 28px;
+        color: #464646;
+      }
+    }
+
+    .input-box {
+      @include pos-abs-center-horizontal;
+      bottom: 20px;
     }
   }
 }
@@ -486,6 +536,127 @@
   }
 }
 
+/* =================== labs-people =================== */
+.labs-people {
+  padding-top: 71px;
+  padding-bottom: 50px;
+
+  &__card {
+    @include flex;
+
+    height: 401px;
+    margin: 0 -10px;
+    margin-top: 37px;
+  }
+
+  &__item {
+    @include wh(25%, 401px);
+    margin: 0 10px;
+
+    &:nth-of-type(1) {
+      @include bg-url("img", "labs-people__card01.png");
+    }
+
+    &:nth-of-type(2) {
+      @include bg-url("img", "labs-people__card02.png");
+    }
+
+    &:nth-of-type(3) {
+      @include bg-url("img", "labs-people__card03.png");
+    }
+
+    &:nth-of-type(4) {
+      @include bg-url("img", "labs-people__card04.png");
+    }
+
+    height: 100%;
+    transition: all 0.4s;
+
+    a {
+      @include make-before {
+        background: linear-gradient(180deg, transparent, #ee3b4a);
+        opacity: 0;
+        width: 100%;
+        height: 100%;
+        transition: all 0.4s;
+      }
+
+      position: relative;
+      display: inline-block;
+      width: 100%;
+      height: 100%;
+
+      &:hover {
+        &:before {
+          opacity: 1;
+        }
+
+        .labs-people__txt-wrap-txt {
+          opacity: 1;
+        }
+      }
+    }
+  }
+
+  &__txt-wrap {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 52px;
+    text-align: center;
+
+    &-txt {
+      @include font-op {
+        font-size: 18px;
+        font-weight: 300;
+        line-height: 24px;
+        color: #ffffff;
+      }
+
+      transition: all 0.4s;
+      opacity: 0;
+    }
+
+    &-tit {
+      @include font-op {
+        font-size: 20px;
+        line-height: 1;
+        color: #ffffff;
+      }
+
+      margin-top: 18px;
+      padding-bottom: 5px;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+      display: inline-block;
+    }
+  }
+}
+
+/* =================== comunity =================== */
+.community {
+  padding-top: 70px;
+  padding-bottom: 50px;
+  background: rgba(11, 7, 45, 0.06);
+
+  &__info {
+    padding: 27px 31px;
+    background: #fff;
+  }
+
+  &__inner {
+  }
+
+  &__txt-wrap {
+    position: relative;
+
+    .review__more-btn--community {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+  }
+}
+
 /* =================== check =================== */
 .input-box {
   .chk-icon {
@@ -498,6 +669,63 @@
   .chk-box:checked + label.chk-icon {
     @include wh(18px, 18px);
     @include bg-url("img", "check-on.png", "center");
+  }
+}
+
+/* =================== com-table =================== */
+.com-table {
+  margin-top: 50px;
+  border-top: 1px solid #c5c5c5;
+
+  tr {
+    height: 85px;
+    border-bottom: 1px solid rgba(197, 197, 197, 0.5);
+
+    td {
+      text-align: center;
+      vertical-align: middle;
+      cursor: pointer;
+
+      &.date {
+        @include font-op {
+          font-size: 18px;
+          color: #464646;
+        }
+
+        width: 140px;
+      }
+
+      &.heart {
+        @include font-op {
+          font-size: 18px;
+          color: #a7a7a7;
+        }
+
+        width: 120px;
+      }
+
+      &.in-txt {
+        @include font-op {
+          font-size: 18px;
+          color: #464646;
+        }
+
+        width: 890px;
+        text-align: left;
+        padding-left: 30px;
+        box-sizing: border-box;
+      }
+
+      &.id {
+        @include font-op {
+          font-size: 18px;
+          color: #a7a7a7;
+          letter-spacing: -2px;
+        }
+
+        width: 80px;
+      }
+    }
   }
 }
 
