--- a/public/assets/css/custom/ui.css
+++ b/public/assets/css/custom/ui.css
@@ -734,12 +734,13 @@ body,
   width: 100%;
   height: 440px;
   position: relative;
-  background: #ee3b4a; }
+  background: #ee3b4a;
+  overflow: hidden; }
 .visual__slide-wrap {
   top: 50%;
   transform: translateY(-50%); }
   .visual__slide-wrap .main-slide-next {
-    right: 254px;
+    right: 20.8%;
     width: 55px;
     height: 55px;
     background-image: url("../../images/img/slide-right.png");
@@ -750,7 +751,7 @@ body,
     background-size: cover;
     background-repeat: no-repeat; }
   .visual__slide-wrap .main-slide-prev {
-    left: 254px;
+    left: 20.8%;
     width: 55px;
     height: 55px;
     background-image: url("../../images/img/slide-left.png");
