--- a/public/assets/scss/component/_form.scss
+++ b/public/assets/scss/component/_form.scss
@@ -75,3 +75,18 @@
     }
   }
 }
+
+/* =================== check =================== */
+.input-box {
+  .chk-icon {
+    @include wh(18px, 18px);
+    @include bg-url("img", "check-off.png");
+
+    display: inline-block;
+  }
+
+  .chk-box:checked + label.chk-icon {
+    @include wh(18px, 18px);
+    @include bg-url("img", "check-on.png", "center");
+  }
+}
