--- a/public/assets/scss/component/_list.scss
+++ b/public/assets/scss/component/_list.scss
@@ -1,36 +1,294 @@
-/* =================== list =================== */
-.list {
-  display: flex;
-  align-items: center;
-  &-title {
-    width: 200px;
+/* =================== review =================== */
+.review {
+  @include flex {
+    align-self: flex-end;
+    display: flex;
+    flex-direction: column;
   }
-  &-desc {
-    width: 100%;
-  }
-}
-.list-wrap {
-  position: relative;
-  &--underline {
-    .list {
-      border-top: 1px solid #e6e6e6;
-      padding: 10px 0;
-    }
-    .list:first-of-type {
-      border-top: 0;
+
+  &__more-btn {
+    @include wh(96px, 34px);
+    @include bg-url("img", "more-btn.svg");
+
+    transition: 0.4s;
+    margin-bottom: 31px;
+    align-self: flex-end;
+
+    &:hover {
+      @include bg-url("img", "more-btn-on.svg");
     }
   }
-  &--side {
-    .list {
-      justify-content: space-between;
+
+  &__more-btn--community {
+    @include wh(249px, 34px);
+    @include bg-url("img", "more-btn-comu.svg");
+
+    transition: 0.4s;
+    margin-bottom: 31px;
+    align-self: flex-end;
+
+    &:hover {
+      @include bg-url("img", "more-btn-comu-on.svg");
+    }
+  }
+
+  &__txt {
+    @include flex {
       align-items: center;
     }
-    .list-title {
-      min-width: 150px;
-      width: auto;
+
+    @include font-op {
+      font-size: 30px;
+      font-weight: 300;
+      line-height: 45px;
     }
-    .list-desc {
-      width: auto;
+
+    .num {
+      display: inline-block;
+      margin-right: 8px;
+      font-size: 50px;
+      font-weight: 600;
+    }
+  }
+}
+
+/* =================== com-slide =================== */
+.com-slide {
+  position: relative;
+
+  &__item {
+    cursor: pointer;
+    box-sizing: border-box;
+    height: 467px;
+
+    &:hover {
+      // border: 3px solid #ee3b4a;
+      box-sizing: border-box;
+    }
+
+    &--thumb {
+      @include wh(100%, 181px);
+
+      position: relative;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+
+      .tag {
+        @include flex {
+          align-items: center;
+          justify-content: center;
+        }
+
+        @include wh(66px, 24px);
+
+        @include font-op {
+          text-align: center;
+          font-size: 13px;
+          color: #fff;
+        }
+
+        position: absolute;
+        left: 28px;
+        bottom: 15px;
+        border: 1px solid #fff;
+        border-radius: 15px;
+      }
+    }
+  }
+
+  &__info {
+    position: relative;
+    padding: 20px 28px;
+    background: #fff;
+
+    &--star {
+      margin-bottom: 18px;
+
+      .fa-star {
+        color: rgba(225, 187, 0, 0.2);
+      }
+
+      .fa-star.checked {
+        color: #ffbb00;
+      }
+    }
+
+    &--id {
+      @include flex {
+        align-items: center;
+      }
+
+      @include font-op {
+        font-size: 14px;
+        font-weight: 400;
+        color: #a7a7a7;
+      }
+
+      position: absolute;
+      top: 20px;
+      right: 28px;
+
+      img {
+        display: inline-block;
+        margin-right: 5px;
+      }
+    }
+
+    &--txt-wrap {
+      &-tit {
+        @include ellipse(1, 1.1);
+
+        @include font-op {
+          font-size: 20px;
+          font-weight: 600;
+          line-height: 55px;
+        }
+      }
+
+      &-txt {
+        @include ellipse(5, 23px);
+
+        @include font-op {
+          font-size: 16px;
+          line-height: 23px;
+          color: #464646;
+        }
+
+        margin-bottom: 16px;
+      }
+
+      &-heart {
+        img {
+        }
+
+        .num {
+          @include font-op {
+            font-size: 14px;
+            font-weight: 500;
+            color: #ee3b4a;
+          }
+        }
+      }
+    }
+  }
+
+  .swiper-button-next {
+    right: -77px;
+    width: 55px;
+    height: 55px;
+    @include bg-url("img", "com-next.png", "center", "cover");
+  }
+
+  .swiper-button-prev {
+    left: -77px;
+    width: 55px;
+    height: 55px;
+    @include bg-url("img", "com-prev.png", "center", "cover");
+  }
+}
+
+/* =================== com-card =================== */
+.com-card {
+  margin-bottom: 65px;
+
+  &__list {
+    display: flex;
+    margin: 0 -10px;
+  }
+
+  &__item {
+    position: relative;
+    z-index: 1;
+    width: 25%;
+    height: 425px;
+    margin: 0 10px;
+    padding: 47px 23px;
+    padding-bottom: 20px;
+    background: #fff;
+    text-align: center;
+
+    &--tit {
+      @include font-op {
+        font-size: 26px;
+        font-weight: 600;
+        line-height: 32px;
+      }
+
+      margin-bottom: 14px;
+    }
+
+    &--app {
+      @include font-op {
+        font-size: 18px;
+        font-weight: 400;
+        color: #ee3b4a;
+        line-height: 1;
+      }
+
+      display: inline-block;
+      padding-bottom: 8px;
+      border-bottom: 1px solid #ee3b4a;
+      margin-bottom: 37px;
+    }
+
+    &--price {
+      @include flex {
+        align-items: center;
+      }
+
+      @include wh(230px, 56px);
+
+      @include font-op {
+        font-size: 16px;
+        font-weight: 300;
+        color: #ffffff;
+      }
+
+      margin-bottom: 37px;
+      background-image: linear-gradient(180deg, #ee3b4a, #ff937a 130%);
+      border-radius: 40px;
+      display: inline-block;
+
+      .bold {
+        @include font-op {
+          font-size: 26px;
+          font-weight: 600;
+          line-height: 56px;
+          color: #ffffff;
+          vertical-align: sub;
+        }
+
+        margin-left: 7px;
+      }
+    }
+
+    &--txt {
+      @include font-op {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 22px;
+        color: #242424;
+      }
+
+      margin-bottom: 16px;
+    }
+
+    &--txt02 {
+      @include font-op {
+        font-size: 16px;
+        font-weight: 300;
+        line-height: 28px;
+        color: #464646;
+      }
+    }
+
+    .input-box {
+      @include pos-abs-center-horizontal;
+      bottom: 20px;
     }
   }
 }
