--- a/public/assets/scss/layout/_header.scss
+++ b/public/assets/scss/layout/_header.scss
@@ -34,11 +34,43 @@
       font-size: 16px;
       font-weight: 600;
     }
+    @include make-after {
+      @include wh(8px, 8px);
 
+      opacity: 0;
+      position: absolute;
+      top: -6px;
+      right: 4px;
+      background: rgba(239, 84, 85, 0.4);
+      border-radius: 50%;
+      display: inline-block;
+      transition: all 0.6s;
+    }
+    @include make-before {
+      @include wh(8px, 8px);
+
+      opacity: 0;
+      position: absolute;
+      right: -1px;
+      top: -6px;
+      background: #ef5455;
+      border-radius: 50%;
+      display: inline-block;
+    }
+
+    position: relative;
     transition: all 0.7s;
 
     &:hover {
       color: #ee3b4a;
+      transition: all 0.4s;
+
+      &:before {
+        opacity: 1;
+      }
+      &::after {
+        opacity: 1;
+      }
     }
   }
 }
