--- a/public/assets/scss/ui.scss
+++ b/public/assets/scss/ui.scss
@@ -15,6 +15,8 @@
 @import "component/button";
 @import "component/form";
 @import "component/list";
+@import "component/table";
+@import "component/title";
 
 // 5. layout
 @import "layout/layout";
