--- a/public/assets/css/custom/ui.css
+++ b/public/assets/css/custom/ui.css
@@ -1044,9 +1044,10 @@ body,
   top: 50%;
   transform: translateY(-50%); }
   .visual__slide-wrap .main-slide-next {
-    right: 20.8%;
+    right: 20.2%;
     width: 55px;
     height: 55px;
+    margin-top: -50px;
     background-image: url("../../images/img/slide-right.png");
     background-position: center;
     background-size: cover;
@@ -1055,9 +1056,10 @@ body,
     background-size: cover;
     background-repeat: no-repeat; }
   .visual__slide-wrap .main-slide-prev {
-    left: 20.8%;
+    left: 20.2%;
     width: 55px;
     height: 55px;
+    margin-top: -50px;
     background-image: url("../../images/img/slide-left.png");
     background-position: center;
     background-size: cover;
@@ -1066,11 +1068,81 @@ body,
     background-size: cover;
     background-repeat: no-repeat; }
 .visual__slide--item {
-  height: 348px;
-  background: #000;
-  opacity: 0.2; }
+  width: 174px !important;
+  margin: 0 11.5px;
+  opacity: 0.2;
+  position: relative;
+  z-index: -1; }
   .visual__slide--item.swiper-slide-active, .visual__slide--item.swiper-slide-next, .visual__slide--item.swiper-slide-prev {
     opacity: 1; }
+  .visual__slide--item-top {
+    position: relative;
+    height: 30px;
+    background: #fff; }
+    .visual__slide--item-top .vis-top-icon {
+      position: absolute;
+      left: 7px;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%); }
+    .visual__slide--item-top .vis-top-logo {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      top: 10x; }
+    .visual__slide--item-top .vis-top-icon2 {
+      position: absolute;
+      right: 7px;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%); }
+  .visual__slide--item-img {
+    width: 174px;
+    height: 205px; }
+    .visual__slide--item-img img {
+      width: 100%; }
+  .visual__slide--item-bot {
+    position: relative;
+    padding: 9px 7px;
+    background: #fff; }
+    .visual__slide--item-bot .vis-top-icon3 {
+      position: relative;
+      top: -2px; }
+    .visual__slide--item-bot .vis-top-icon4 {
+      float: right; }
+    .visual__slide--item-bot .is-txt {
+      margin-top: 4px;
+      font-size: 13px;
+      font-weight: 500; }
+      .visual__slide--item-bot .is-txt .is-num {
+        margin-top: 4px;
+        font-size: 13px;
+        font-weight: 500; }
+  .visual__slide--item-tag {
+    margin-top: 13px; }
+    .visual__slide--item-tag .is-txt {
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 19px;
+      color: #ffffff;
+      margin-bottom: 8px; }
+    .visual__slide--item-tag .is-tag {
+      font-size: 13px;
+      line-height: 22px;
+      text-align: center;
+      display: inline-block;
+      width: 66px;
+      height: 24px;
+      background: #ffffff;
+      border-radius: 15px; }
+      .visual__slide--item-tag .is-tag.on {
+        position: relative;
+        top: 1px;
+        box-sizing: border-box;
+        background: transparent;
+        border: 1px solid #fff;
+        color: #ffffff; }
 .visual__txt-wrap {
   position: relative;
   z-index: 10;
